parser.output
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: template $end

    1 template: typelines

    2 typelines: typelines typeline
    3          | typeline

    4 typeline: expression
    5         | block COLON blockstmt

    6 block: IF expression

    7 blockstmt: blockstmt INDENTTOK typeline
    8          | INDENTTOK typeline

    9 expression: IDENTIFIER ASSIGNMENT expression
   10           | OBRACE expression EBRACE
   11           | expression POWER expression
   12           | expression STAR expression
   13           | expression DIVISION expression
   14           | expression PLUS expression
   15           | expression MINUS expression
   16           | expression LEFTSHIFT expression
   17           | expression RIGHTSHIFT expression
   18           | expression LESSTHAN expression
   19           | expression GREATERTHAN expression
   20           | expression DOUBLEEQUAL expression
   21           | expression NOTEQUAL expression
   22           | expression LESSTHOREQ expression
   23           | expression GREATTHOREQ expression
   24           | IDENTIFIER
   25           | INT
   26           | STRING
   27           | DECIMAL


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 25
DECIMAL (259) 27
STRING (260) 26
IDENTIFIER (261) 9 24
INDENTTOK (262) 7 8
IF (263) 6
COLON (264) 5
OBRACE (265) 10
EBRACE (266) 10
ASSIGNMENT (267) 9
LESSTHAN (268) 18
GREATERTHAN (269) 19
DOUBLEEQUAL (270) 20
NOTEQUAL (271) 21
LESSTHOREQ (272) 22
GREATTHOREQ (273) 23
LEFTSHIFT (274) 16
RIGHTSHIFT (275) 17
PLUS (276) 14
MINUS (277) 15
STAR (278) 12
DIVISION (279) 13
POWER (280) 11


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
template (27)
    on left: 1, on right: 0
typelines (28)
    on left: 2 3, on right: 1 2
typeline (29)
    on left: 4 5, on right: 2 3 7 8
block (30)
    on left: 6, on right: 5
blockstmt (31)
    on left: 7 8, on right: 5 7
expression (32)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    on right: 4 6 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23


State 0

    0 $accept: . template $end
    1 template: . typelines
    2 typelines: . typelines typeline
    3          | . typeline
    4 typeline: . expression
    5         | . block COLON blockstmt
    6 block: . IF expression
    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    OBRACE      shift, and go to state 6

    template    go to state 7
    typelines   go to state 8
    typeline    go to state 9
    block       go to state 10
    expression  go to state 11


State 1

   25 expression: INT .

    $default  reduce using rule 25 (expression)


State 2

   27 expression: DECIMAL .

    $default  reduce using rule 27 (expression)


State 3

   26 expression: STRING .

    $default  reduce using rule 26 (expression)


State 4

    9 expression: IDENTIFIER . ASSIGNMENT expression
   24           | IDENTIFIER .  [$end, INT, DECIMAL, STRING, IDENTIFIER, INDENTTOK, IF, COLON, OBRACE, EBRACE, LESSTHAN, GREATERTHAN, DOUBLEEQUAL, NOTEQUAL, LESSTHOREQ, GREATTHOREQ, LEFTSHIFT, RIGHTSHIFT, PLUS, MINUS, STAR, DIVISION, POWER]

    ASSIGNMENT  shift, and go to state 12

    $default  reduce using rule 24 (expression)


State 5

    6 block: IF . expression
    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 13


State 6

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   10           | OBRACE . expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 14


State 7

    0 $accept: template . $end

    $end  shift, and go to state 15


State 8

    1 template: typelines .  [$end]
    2 typelines: typelines . typeline
    4 typeline: . expression
    5         | . block COLON blockstmt
    6 block: . IF expression
    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    OBRACE      shift, and go to state 6

    $default  reduce using rule 1 (template)

    typeline    go to state 16
    block       go to state 10
    expression  go to state 11


State 9

    3 typelines: typeline .

    $default  reduce using rule 3 (typelines)


State 10

    5 typeline: block . COLON blockstmt

    COLON  shift, and go to state 17


State 11

    4 typeline: expression .  [$end, INT, DECIMAL, STRING, IDENTIFIER, INDENTTOK, IF, OBRACE]
   11 expression: expression . POWER expression
   12           | expression . STAR expression
   13           | expression . DIVISION expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . LEFTSHIFT expression
   17           | expression . RIGHTSHIFT expression
   18           | expression . LESSTHAN expression
   19           | expression . GREATERTHAN expression
   20           | expression . DOUBLEEQUAL expression
   21           | expression . NOTEQUAL expression
   22           | expression . LESSTHOREQ expression
   23           | expression . GREATTHOREQ expression

    LESSTHAN     shift, and go to state 18
    GREATERTHAN  shift, and go to state 19
    DOUBLEEQUAL  shift, and go to state 20
    NOTEQUAL     shift, and go to state 21
    LESSTHOREQ   shift, and go to state 22
    GREATTHOREQ  shift, and go to state 23
    LEFTSHIFT    shift, and go to state 24
    RIGHTSHIFT   shift, and go to state 25
    PLUS         shift, and go to state 26
    MINUS        shift, and go to state 27
    STAR         shift, and go to state 28
    DIVISION     shift, and go to state 29
    POWER        shift, and go to state 30

    $default  reduce using rule 4 (typeline)


State 12

    9 expression: . IDENTIFIER ASSIGNMENT expression
    9           | IDENTIFIER ASSIGNMENT . expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 31


State 13

    6 block: IF expression .  [COLON]
   11 expression: expression . POWER expression
   12           | expression . STAR expression
   13           | expression . DIVISION expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . LEFTSHIFT expression
   17           | expression . RIGHTSHIFT expression
   18           | expression . LESSTHAN expression
   19           | expression . GREATERTHAN expression
   20           | expression . DOUBLEEQUAL expression
   21           | expression . NOTEQUAL expression
   22           | expression . LESSTHOREQ expression
   23           | expression . GREATTHOREQ expression

    LESSTHAN     shift, and go to state 18
    GREATERTHAN  shift, and go to state 19
    DOUBLEEQUAL  shift, and go to state 20
    NOTEQUAL     shift, and go to state 21
    LESSTHOREQ   shift, and go to state 22
    GREATTHOREQ  shift, and go to state 23
    LEFTSHIFT    shift, and go to state 24
    RIGHTSHIFT   shift, and go to state 25
    PLUS         shift, and go to state 26
    MINUS        shift, and go to state 27
    STAR         shift, and go to state 28
    DIVISION     shift, and go to state 29
    POWER        shift, and go to state 30

    $default  reduce using rule 6 (block)


State 14

   10 expression: OBRACE expression . EBRACE
   11           | expression . POWER expression
   12           | expression . STAR expression
   13           | expression . DIVISION expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . LEFTSHIFT expression
   17           | expression . RIGHTSHIFT expression
   18           | expression . LESSTHAN expression
   19           | expression . GREATERTHAN expression
   20           | expression . DOUBLEEQUAL expression
   21           | expression . NOTEQUAL expression
   22           | expression . LESSTHOREQ expression
   23           | expression . GREATTHOREQ expression

    EBRACE       shift, and go to state 32
    LESSTHAN     shift, and go to state 18
    GREATERTHAN  shift, and go to state 19
    DOUBLEEQUAL  shift, and go to state 20
    NOTEQUAL     shift, and go to state 21
    LESSTHOREQ   shift, and go to state 22
    GREATTHOREQ  shift, and go to state 23
    LEFTSHIFT    shift, and go to state 24
    RIGHTSHIFT   shift, and go to state 25
    PLUS         shift, and go to state 26
    MINUS        shift, and go to state 27
    STAR         shift, and go to state 28
    DIVISION     shift, and go to state 29
    POWER        shift, and go to state 30


State 15

    0 $accept: template $end .

    $default  accept


State 16

    2 typelines: typelines typeline .

    $default  reduce using rule 2 (typelines)


State 17

    5 typeline: block COLON . blockstmt
    7 blockstmt: . blockstmt INDENTTOK typeline
    8          | . INDENTTOK typeline

    INDENTTOK  shift, and go to state 33

    blockstmt  go to state 34


State 18

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   18           | expression LESSTHAN . expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 35


State 19

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   19           | expression GREATERTHAN . expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 36


State 20

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   20           | expression DOUBLEEQUAL . expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 37


State 21

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   21           | expression NOTEQUAL . expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 38


State 22

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   22           | expression LESSTHOREQ . expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 39


State 23

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   23           | expression GREATTHOREQ . expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 40


State 24

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   16           | expression LEFTSHIFT . expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 41


State 25

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   17           | expression RIGHTSHIFT . expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 42


State 26

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   14           | expression PLUS . expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 43


State 27

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   15           | expression MINUS . expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 44


State 28

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   12           | expression STAR . expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 45


State 29

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   13           | expression DIVISION . expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 46


State 30

    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   11           | expression POWER . expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    OBRACE      shift, and go to state 6

    expression  go to state 47


State 31

    9 expression: IDENTIFIER ASSIGNMENT expression .  [$end, INT, DECIMAL, STRING, IDENTIFIER, INDENTTOK, IF, COLON, OBRACE, EBRACE]
   11           | expression . POWER expression
   12           | expression . STAR expression
   13           | expression . DIVISION expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . LEFTSHIFT expression
   17           | expression . RIGHTSHIFT expression
   18           | expression . LESSTHAN expression
   19           | expression . GREATERTHAN expression
   20           | expression . DOUBLEEQUAL expression
   21           | expression . NOTEQUAL expression
   22           | expression . LESSTHOREQ expression
   23           | expression . GREATTHOREQ expression

    LESSTHAN     shift, and go to state 18
    GREATERTHAN  shift, and go to state 19
    DOUBLEEQUAL  shift, and go to state 20
    NOTEQUAL     shift, and go to state 21
    LESSTHOREQ   shift, and go to state 22
    GREATTHOREQ  shift, and go to state 23
    LEFTSHIFT    shift, and go to state 24
    RIGHTSHIFT   shift, and go to state 25
    PLUS         shift, and go to state 26
    MINUS        shift, and go to state 27
    STAR         shift, and go to state 28
    DIVISION     shift, and go to state 29
    POWER        shift, and go to state 30

    $default  reduce using rule 9 (expression)

    Conflict between rule 9 and token LESSTHAN resolved as shift (ASSIGNMENT < LESSTHAN).
    Conflict between rule 9 and token GREATERTHAN resolved as shift (ASSIGNMENT < GREATERTHAN).
    Conflict between rule 9 and token DOUBLEEQUAL resolved as shift (ASSIGNMENT < DOUBLEEQUAL).
    Conflict between rule 9 and token NOTEQUAL resolved as shift (ASSIGNMENT < NOTEQUAL).
    Conflict between rule 9 and token LESSTHOREQ resolved as shift (ASSIGNMENT < LESSTHOREQ).
    Conflict between rule 9 and token GREATTHOREQ resolved as shift (ASSIGNMENT < GREATTHOREQ).
    Conflict between rule 9 and token LEFTSHIFT resolved as shift (ASSIGNMENT < LEFTSHIFT).
    Conflict between rule 9 and token RIGHTSHIFT resolved as shift (ASSIGNMENT < RIGHTSHIFT).
    Conflict between rule 9 and token PLUS resolved as shift (ASSIGNMENT < PLUS).
    Conflict between rule 9 and token MINUS resolved as shift (ASSIGNMENT < MINUS).
    Conflict between rule 9 and token STAR resolved as shift (ASSIGNMENT < STAR).
    Conflict between rule 9 and token DIVISION resolved as shift (ASSIGNMENT < DIVISION).
    Conflict between rule 9 and token POWER resolved as shift (ASSIGNMENT < POWER).


State 32

   10 expression: OBRACE expression EBRACE .

    $default  reduce using rule 10 (expression)


State 33

    4 typeline: . expression
    5         | . block COLON blockstmt
    6 block: . IF expression
    8 blockstmt: INDENTTOK . typeline
    9 expression: . IDENTIFIER ASSIGNMENT expression
   10           | . OBRACE expression EBRACE
   11           | . expression POWER expression
   12           | . expression STAR expression
   13           | . expression DIVISION expression
   14           | . expression PLUS expression
   15           | . expression MINUS expression
   16           | . expression LEFTSHIFT expression
   17           | . expression RIGHTSHIFT expression
   18           | . expression LESSTHAN expression
   19           | . expression GREATERTHAN expression
   20           | . expression DOUBLEEQUAL expression
   21           | . expression NOTEQUAL expression
   22           | . expression LESSTHOREQ expression
   23           | . expression GREATTHOREQ expression
   24           | . IDENTIFIER
   25           | . INT
   26           | . STRING
   27           | . DECIMAL

    INT         shift, and go to state 1
    DECIMAL     shift, and go to state 2
    STRING      shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    OBRACE      shift, and go to state 6

    typeline    go to state 48
    block       go to state 10
    expression  go to state 11


State 34

    5 typeline: block COLON blockstmt .  [$end, INT, DECIMAL, STRING, IDENTIFIER, INDENTTOK, IF, OBRACE]
    7 blockstmt: blockstmt . INDENTTOK typeline

    INDENTTOK  shift, and go to state 49

    INDENTTOK  [reduce using rule 5 (typeline)]
    $default   reduce using rule 5 (typeline)


State 35

   11 expression: expression . POWER expression
   12           | expression . STAR expression
   13           | expression . DIVISION expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . LEFTSHIFT expression
   17           | expression . RIGHTSHIFT expression
   18           | expression . LESSTHAN expression
   18           | expression LESSTHAN expression .  [$end, INT, DECIMAL, STRING, IDENTIFIER, INDENTTOK, IF, COLON, OBRACE, EBRACE, LESSTHAN, GREATERTHAN, DOUBLEEQUAL, NOTEQUAL, LESSTHOREQ, GREATTHOREQ]
   19           | expression . GREATERTHAN expression
   20           | expression . DOUBLEEQUAL expression
   21           | expression . NOTEQUAL expression
   22           | expression . LESSTHOREQ expression
   23           | expression . GREATTHOREQ expression

    LEFTSHIFT   shift, and go to state 24
    RIGHTSHIFT  shift, and go to state 25
    PLUS        shift, and go to state 26
    MINUS       shift, and go to state 27
    STAR        shift, and go to state 28
    DIVISION    shift, and go to state 29
    POWER       shift, and go to state 30
